zecore_zeus_etl/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zecore-zeus-etl
  namespace: zeus
spec:
  podSelector:
    matchLabels:
      app: zecore-zeus-etl
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: zecore-zeus-etl
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - ports:
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 5432
